--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,6 +1,14 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Client</a>
+        <a class="navbar-brand" href="">
+            Hi, 
+            <AuthorizeView>
+                <Authorized>@context.User.Identity!.Name</Authorized>
+                <NotAuthorized>Guest</NotAuthorized>
+            </AuthorizeView>
+        </a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
