Adding Administrator/User Dashboard

--- a/Client/Pages/AccountPages/RegisterPage.razor
+++ b/Client/Pages/AccountPages/RegisterPage.razor
@@ -68,6 +68,14 @@
     public bool ShowLoadingButton { get; set; } = false;
     Register User = new();
 
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthenticationState { get; set; }
+
+    protected async override Task OnInitializedAsync()
+    {
+        await CheckUserAuthentication();
+    }
+
     async Task HandlerRegistration()
     {
         ShowLoadingButton = true;
@@ -87,5 +95,14 @@
     private async Task DisplayDialog(string content, string title)
     {
         await DialogService.AlertAsync(content, title);
+    }
+
+    private async Task CheckUserAuthentication()
+    {
+        var user = (await AuthenticationState).User;
+        bool isUserAuthenticated = user.Identity!.IsAuthenticated;
+
+        if (!isUserAuthenticated)
+            NavManager.NavigateTo("/home/dashboard");
     }
 }
