Free UI integration instead Syncfusion

--- a/Client/Pages/AccountPages/LoginPage.razor
+++ b/Client/Pages/AccountPages/LoginPage.razor
@@ -1,7 +1,6 @@
 ﻿@page "/identity/account/login"
 @using Client.Pages.ComponentsPage
-@using Syncfusion.Blazor.Popups;
-@inject SfDialogService DialogService
+@inject IDialogService DialogService
 @layout AuthenticationLayout
 
 <div class="container">
@@ -59,6 +58,7 @@
 @code {
     public bool ShowLoadingButton { get; set; } = false;
     Login User = new();
+    private FluentDialog? _myFluentDialog;
 
     [CascadingParameter]
     public Task<AuthenticationState> AuthenticationState { get; set; }
@@ -94,7 +94,13 @@
 
     private async Task DisplayDialog(string content, string title)
     {
-        await DialogService.AlertAsync(content, title);
+        if (title == "Alert")
+            await DialogService.ShowWarningAsync(content);
+        if (title == "Login Success")
+        {
+            var dialog = await DialogService.ShowSuccessAsync(content);
+            await dialog.Result;
+        }
     }
 
     private async Task CheckUserAuthentication()
