--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -13,6 +13,7 @@
 @using ClientLibrary.Helpers
 @using ClientLibrary.Services.Contracts;
 @using Microsoft.AspNetCore.Components.Authorization;
+@using Microsoft.Fast.Components.FluentUI;
 
 @inject NavigationManager NavManager
 @inject AuthenticationStateProvider AuthStateProvider
