--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
         </article>
     </main>
 </div>
-<Syncfusion.Blazor.Popups.SfDialogProvider />
+<FluentDialogProvider />
 
 @code{
     async Task LogoutClicked()
