--- a/Client/Pages/DepartmentPages/GeneralDepartmentPage.razor
+++ b/Client/Pages/DepartmentPages/GeneralDepartmentPage.razor
@@ -1,4 +1,5 @@
-﻿@using Client.ApplicationStates
+﻿@using BaseLibrary.Entities
+@using Client.ApplicationStates
 @implements IDisposable
 @inject IDialogService DialogService
 @inject DepartmentState departmentState
@@ -59,7 +60,7 @@
 
 @code{
     GeneralDepartmentDialog? generalDepartmentDialog;
-    GeneralDepartmentDTO Department = new();
+    GeneralDepartment Department = new();
 
     protected override void OnInitialized(){
         departmentState.GeneralDepartmentAction += StateHasChanged;
