CRUD on Users, Departments, Employees etc.. #10 #12 #13 #14

--- a/Client/Pages/ContentPages/HomePage.razor
+++ b/Client/Pages/ContentPages/HomePage.razor
@@ -1,9 +1,14 @@
 ﻿@page "/home/dashboard"
-@using Client.Pages.AdministrationPages
-@using Client.Pages.DepartmentPages
 
 <TableBanner />
-<GeneralDepartmentPage/>
+<GeneralDepartmentPage />
+<DepartmentPage />
+<BranchPage />
+<CountryPage />
+<CityPage />
+<TownPage />
+<UserPage />
+<EmployeePage />
 
 @code {
     [CascadingParameter]
